prevented the overflow of numbers in result id

--- a/lesson_04/badCalculator/style.css
+++ b/lesson_04/badCalculator/style.css
@@ -19,6 +19,9 @@ body {
     margin-bottom: 0;
     margin-right: 25%;
     text-align: right;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .layout {
